Added some rules to .gitignore
Now the unnecessary folders and space consuming zips are not committed

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,14 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Data folders and zips
+*.zip
+efficientnet_pytorch/
+results/
+minicity/
+cityscapes/
+baseline_run/
+vipriors-challenges-toolkit/
+
+
